# win32-starter

./: .clang-format  CMakeLists.txt  LICENSE  README.md
0.hello_world/: CMakeLists.txt  app.manifest  main.c  main.h  resource.h  resource.rc
1.hello_world/: CMakeLists.txt
1.hello_world/1.basic_window/: CMakeLists.txt  main.c  main.h
1.hello_world/2.dialog_window/: CMakeLists.txt  main.c  main.h  resource.h  resource.rc
1.show_case/: CMakeLists.txt
1.show_case/1.process_show_case/: CMakeLists.txt  main.c
1.show_case/2.thread_show_case/: CMakeLists.txt  main.c
1.show_case/3.io_show_case/: CMakeLists.txt  main.c
1.show_case/4.memory_show_case/: CMakeLists.txt  app.manifest  main.c  main.h
1.show_case/5.dll_show_case/: CMakeLists.txt  main.c  main.h
1.show_case/5.dll_show_case/inject/: CMakeLists.txt  main.c
1.show_case/show_case_template/: CMakeLists.txt  main.c
11.dll_inject/: CMakeLists.txt  main.c  main.h
11.dll_inject/demo_dll/: CMakeLists.txt  main.c
2.enum_resource/: CMakeLists.txt
2.enum_resource/1.directory_enum/: CMakeLists.txt  main.c
2.enum_resource/2.tlhelp_enum/: CMakeLists.txt  main.c  main.h
2.error_lookup/: CMakeLists.txt  app.manifest  main.c  main.h  resource.h  resource.rc
3.show_case/: CMakeLists.txt
3.show_case/1.thread_pool/: CMakeLists.txt  main.c  main.h
3.show_case/2.pipe/: CMakeLists.txt
3.show_case/2.pipe/1.server/: CMakeLists.txt  app.manifest  main.c  main.h
3.show_case/2.pipe/2.client/: CMakeLists.txt  main.c  main.h
doc/: 0.StandardC.c  0.Win32基础.c  1.Win32基础.c  1.窗口.c  11.卷管理管理.c  11.消息.c  12.目录管理.c  12.键盘鼠标消息.c  13.文件管理.c  14.IOCP.c  16.字符串.c  19.动态链接库.c  2.对话框.c  2.异常处理.c  21.卷.c  22.目录.c  23.文件.c  26.内存.c  27.文件映射.c  3.字符串操作.c  3.控件.c  30.作业.c  31.进程.c  36.线程.c  37.线程池.c  38.线程同步.c  4.资源.c  4.进程管理.c  40.工具帮助函数.c  41.管道.c  5..作业对象管理.c  5.定时器.c  51.异常处理.c  52.Hook.c  53.远端注入.c  6.时间.c  6.线程管理.c  7.并发同步.c  7.粘贴板.c  8.内存管理.c  (+3 more)
doc/C语言/: 0.Basic.c  1.可变参数.c  11.原子操作.c  12.并发.c  2.字符操作.c  3.内存管理.c  4.日期时间.c  5.读写.c
utils/: CMakeLists.txt
utils/common/: CMakeLists.txt  common.c
utils/common/include/utils/: common.h
utils/error_utils/: CMakeLists.txt  error.c
utils/error_utils/include/utils/: error.h
